# aave-looper

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  aave-pool-abi.json
bindings/src/: aavelooper.rs  erc20.rs  iaaveincentivescontroller.rs  ierc20permit.rs  ilendingpooladdressesprovider.rs  safeerc20.rs
cache/: solidity-files-cache.json
contracts/: foundry.toml
contracts/script/: DeployAaveLooper.s.sol  EnterAavePosition.s.sol  Exit.s.sol  ExitWithFlashloan.s.sol  GetPosition.s.sol  HelperConfig.s.sol  Leverage.s.sol  Repay.s.sol  Withdraw.s.sol
contracts/src/: AaveLooper.sol  IAaveInterfaces.sol  IAggregatorContractV5.sol  ImmutableOwnable.sol
src/: aave.rs  addressbook.json  addressbook.rs  bot.rs  cli.rs  config.rs  main.rs  provider.rs  telegram.rs  token_manager.rs
src/bindings/: Cargo.toml  aavelooper.rs  address.rs  datatypes.rs  deployaavelooper.rs  devopstools.rs  exit.rs  exitwithflashloan.rs  getposition.rs  helperconfig.rs  iaaveincentivescontroller.rs  iaaveoracle.rs  ierc20errors.rs  ilendingpool.rs  immutableownable.rs  ipool.rs  ipriceoraclegetter.rs  iswaprouter.rs  leverage.rs  math.rs  mockerc20.rs  mockerc721.rs  mod.rs  repay.rs  safeerc20.rs  signedmath.rs  strings.rs  stringutils.rs
src/bindings/src/: address.rs  iaavepriceoracle.rs  ierc1155errors.rs  ierc20.rs  ierc20metadata.rs  ierc721errors.rs  istakedaave.rs  lib.rs
